--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
   
   <style>
     /* Stile personalizzato per posizionare "Triani" sotto "Lorenzo Valtriani" */
+    * {
+        font-family: Courier;
+    }
+
     .navbar-brand {
       display: flex;
       flex-direction: column;
