--- a/index.html
+++ b/index.html
@@ -9,11 +9,6 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
   
   <style>
-    /* Stile personalizzato per posizionare "Triani" sotto "Lorenzo Valtriani" */
-    * {
-        font-family: Courier;
-    }
-
     .navbar-brand {
       display: flex;
       flex-direction: column;
@@ -75,8 +70,15 @@
         padding: 1px;
       }
 
+      .btn-group img {
+        height: 10px !important;
+      }
+
     }
     
+    * {
+        font-family: Courier !important;
+    }
 
   </style>
 </head>
