--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       .btn-group img {
         height: 10px !important;
       }
-
+      
     }
     
     * {
@@ -105,7 +105,7 @@
             <a class="nav-link active" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
-            <a class="nav-link" href="#">Blogghettino</a>
+            <a class="nav-link" href="./blogghettino/index.html">Blogghettino</a>
             </li>
         </ul>
         </div>
