--- a/index.html
+++ b/index.html
@@ -124,11 +124,11 @@
         <div class="col-sm-4">
             <ul class="list-group" >
             <li class="list-group-item"><strong>Name:</strong> Lorenzo Valtriani</li>
-            <li class="list-group-item"><strong>Age:</strong> 22</li>
-            <li class="list-group-item"><strong>Diploma:</strong> Istituto Tecnico - Informatica [2020] </li>
-            <li class="list-group-item"><strong>University:</strong> Ingegneria Informatica, UniPi </li>
+            <li class="list-group-item"><strong>Age:</strong> 23</li>
+            <li class="list-group-item"><strong>Curriculum:</strong> Istituto Tecnico - Informatica [2020] </li>
+            <li class="list-group-item"><strong>Studying:</strong> Ingegneria Informatica, UniPi </li>
             <li class="list-group-item"><strong>Work:</strong> Freelance </li>
-            <li class="list-group-item"><strong>Working environment:</strong> Attualmente soprattutto siti web statici e dinamici </li>
+            <li class="list-group-item"><strong>Working environment:</strong> Web developer & commissions </li>
             <li class="list-group-item">
                 <a target="_blank" href="https://github.com/trianitriani"><i class="bi bi-github"></i></a>
                 <a target="_blank" href="https://www.linkedin.com/in/lorenzovaltriani/"><i class="bi bi-linkedin"></i></a>
@@ -308,10 +308,10 @@
             </div>
         </div>
     </div>
-
-    <div style="display: flex; align-items: center; justify-content: center;">   
-        <script type="text/javascript" src="https://www.counters-free.net/count/dwwm"></script><br>
-        <a href='http://www.freevisitorcounters.com'>at Freevisitorcounters.com</a>
+    
+    <div style="display: flex; align-items: center; justify-content: center; flex-direction: column;">   
+        <script type="text/javascript" src="https://www.counters-free.net/count/dwwm"></script>
+        <a href='http://www.freevisitorcounters.com' style="visibility: hidden;">at Freevisitorcounters.com</a>
         <script type='text/javascript' src='https://whomania.com/ctr?id=fea2b26d22f5f26ed61e07e54e3f6c1774afa2f5'></script>
     </div>
     
