--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <a class="nav-link active" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
-            <a class="nav-link" href="./blogghettino/index.html">Blogghettino</a>
+            <a class="nav-link" href="./blogghettino/index.html" style="display: none;">Blogghettino</a>
             </li>
         </ul>
         </div>
