--- a/blogghettino/index.html
+++ b/blogghettino/index.html
@@ -1,15 +1,15 @@
 <!doctype html>
 <html class="no-js" lang="it" data-content_root="./">
-  <head><meta charset="utf-8"/>
+    <head><meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
     <meta name="color-scheme" content="light dark"><meta name="viewport" content="width=device-width, initial-scale=1" />
-<link rel="index" title="Indice" href="genindex.html" /><link rel="search" title="Cerca" href="search.html" /><link rel="next" title="Set Up Apache Virtual Host on Ubuntu" href="virtualHosting.html" />
+    <link rel="index" title="Indice" href="genindex.html" /><link rel="search" title="Cerca" href="search.html" /><link rel="next" title="Set Up Apache Virtual Host on Ubuntu" href="virtualHosting.html" />
 
     <!-- Generated with Sphinx 7.2.6 and Furo 2024.01.29 -->
-        <title>bloghettino 2024 documentazione</title>
+      <title>bloghettino</title>
       <link rel="stylesheet" type="text/css" href="_static/pygments.css?v=a746c00c" />
-    <link rel="stylesheet" type="text/css" href="_static/styles/furo.css?v=135e06be" />
-    <link rel="stylesheet" type="text/css" href="_static/styles/furo-extensions.css?v=36a5483c" />
+      <link rel="stylesheet" type="text/css" href="_static/styles/furo.css?v=135e06be" />
+      <link rel="stylesheet" type="text/css" href="_static/styles/furo-extensions.css?v=36a5483c" />
     
     
 
@@ -111,8 +111,6 @@
 <label class="overlay toc-overlay" for="__toc">
   <div class="visually-hidden">Hide table of contents sidebar</div>
 </label>
-
-
 
 <div class="page">
   <header class="mobile-header">
