--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
         <ul class="navbar-nav">
             <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link active" aria-current="page" href="#" style="display: none;">Home</a>
             </li>
             <li class="nav-item">
             <a class="nav-link" href="./blogghettino/index.html" style="display: none;">Blogghettino</a>
