--- a/index.html
+++ b/index.html
@@ -9,6 +9,20 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
   
   <style>
+    /* Nascondi la barra di scorrimento per i browser basati su Webkit (Chrome, Safari) */
+    body::-webkit-scrollbar {
+    display: none;
+    }
+
+    /* Nascondi la barra di scorrimento per Firefox */
+    body {
+    scrollbar-width: none; /* Firefox */
+    }
+
+    body {
+    overflow-y: scroll; /* Assicurati che il corpo possa ancora scorrere */
+    }
+
     .navbar-brand {
       display: flex;
       flex-direction: column;
@@ -49,14 +63,13 @@
 
     .custom-cursor {
         position: fixed;
-        width: 30px; /* Imposta la larghezza dell'immagine del cursore */
-        height: 30px; /* Imposta l'altezza dell'immagine del cursore */
-        background-image: url('./effetti/torchic.png'); /* Imposta l'immagine del cursore */
-        background-size: cover; /* Imposta la modalità di ridimensionamento dell'immagine */
-        pointer-events: none; /* Permetti ai clic di passare attraverso il cursore */
-        z-index: 9999; /* Assicura che il cursore sia sopra a tutto il resto */
+        width: 30px; 
+        height: 30px; 
+        background-image: url('./effetti/torchic.png');
+        background-size: cover; 
+        pointer-events: none; 
+        z-index: 9999; 
     }
-
 
     /* Media query per schermi più piccoli, ad esempio telefoni */
     @media (max-width: 768px) {
