--- a/index.html
+++ b/index.html
@@ -86,7 +86,17 @@
       .btn-group img {
         height: 10px !important;
       }
-
+    
+      .custom-cursor {
+        display: none;
+        position: fixed;
+        width: 30px; 
+        height: 30px; 
+        background-image: url('');
+        background-size: cover; 
+        pointer-events: none; 
+        z-index: -1; 
+      }
     }
     
     * {
