--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         <!-- Foto profilo -->
         <div class="col-md-4">
             <div class="profile-info">
-            <img src="img/foto.png" alt="Profilo" class="img-fluid" height="425px">
+            <img src="img/foto.jpg" alt="Profilo" class="img-fluid" height="425px">
             </div>
         </div>
         <!-- Informazioni -->
