--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         </button>
 
         <!-- Navbar links -->
-        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+        <!-- div class="collapse navbar-collapse justify-content-end" id="navbarNav">
         <ul class="navbar-nav">
             <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="#" style="display: none;">Home</a>
@@ -133,7 +133,7 @@
             <a class="nav-link" href="./blogghettino/index.html" style="display: none;">Blogghettino</a>
             </li>
         </ul>
-        </div>
+        </div -->
     </div>
     </nav>
 
