--- a/index.html
+++ b/index.html
@@ -119,10 +119,10 @@
         </a>
 
         <!-- Toggler/collapsibe Button -->
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-        </button>
-
+        <!-- button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button -->
+        
         <!-- Navbar links -->
         <!-- div class="collapse navbar-collapse justify-content-end" id="navbarNav">
         <ul class="navbar-nav">
