--- a/index.html
+++ b/index.html
@@ -117,11 +117,11 @@
         <span>@triani</span> 
         <span class="text-muted" style="font-size: 0.8rem;">Lorenzo Valtriani</span>
         </a>
-
+        
         <!-- Toggler/collapsibe Button -->
-        <!-- button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <button style="display: none;" class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
-        </button -->
+        </button>
         
         <!-- Navbar links -->
         <!-- div class="collapse navbar-collapse justify-content-end" id="navbarNav">
