--- a/index.html
+++ b/index.html
@@ -169,6 +169,35 @@
     <div class="album py-5">
         <div class="container">
             <div class="row row-cols-1 row-cols-md-3 g-4">
+                
+                <!-- progetto large scale -->
+                <div class="col">
+                    <div class="card shadow-sm">
+                        <img src="img/large-scale.png"/>
+                        <div class="card-body">
+                            <p class="card-text">
+                              Build a service using NoSQL databases like MongoDB and Redis for the medical environment for track any purchase and prescribed drugs. 
+                            </p>
+                            <div class="d-flex justify-content-between align-items-center">
+                                <div class="btn-group">
+                                </div>
+                                <div class="btn-group">
+                                    <img src="loghi/java.png" height="20px">
+                                    <img src="loghi/spring.png" height="20px">
+                                    <img src="loghi/mongodb.png" height="20px">
+                                    <img src="loghi/redis.png" height="20px">
+                                </div>
+                            </div>
+                            <div class="d-flex justify-content-between align-items-center">
+                                <div class="btn-group">
+                                    <a target="_blank" href="https://github.com/trianitriani/EasyDrugServer"><i class="bi bi-github"></i></a>
+                                </div>
+                                <small class="text-muted">2025</small>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
                 <!-- primo progetto della tripletta -->
                 <div class="col">
                     <div class="card shadow-sm">
