--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
         background-size: cover;
         pointer-events: none;
         z-index: 9999;
+        transform: translate(-50%, -50%);
     }
 
     /* Media query per schermi più piccoli, ad esempio telefoni */
